<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Laboratory</string>
    <string name="nav_navigation">Navigation</string>
    <string name="nav_lockscreen">Lock Screen</string>
    <string name="nav_statusbar">Status Bar</string>
    <string name="nav_panels">Panels</string>
    <string name="nav_misc">Miscellaneous</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="statusbar_category">Status Bar</string>
    <string name="navigation_category">Navigation</string>
    <string name="lockscreen_category">Lockscreen</string>
    <string name="panels_category">Panels</string>
    <string name="misc_category">Miscellaneous</string>
    <string name="button_settings">Button settings</string>
    <string name="quick_settings_category">Quick Settings</string>
    <string name="recents_category">Recent Panel</string>
    <string name="statusbar_general">General</string>
    <string name="network_traffic_title">Network Traffic</string>
    <string name="ticker_title">Ticker</string>
    <string name="power_menu_settings">Power Menu</string>
    <string name="light_category">Lights</string>
    <string name="carrier_label">Carrier Label</string>
    <string name="notifications_category">Notifications Settings</string>
    <string name="status_bar_clock">Clock &amp; Date</string>
    <string name="ok">Okay</string>
    <string name="reset">Reset</string>
    <string name="button_backlight_options_category">Backlight options</string>
    <string name="button_backlight_enable_title">Allow button backlight</string>
    <string name="button_link_brightness">Link to screen brightness</string>
    <string name="button_link_brightness_summary">Button backlight brightness will adjust based on the screen's brightness level</string>
    <string name="button_manual_brightness">Brightness level</string>
    <string name="button_timeout_title">Backlight timeout</string>
    <string name="button_backlight_on_touch_only_title">Button backlight touch</string>
    <string name="button_backlight_on_touch_only_summary">Button backlight will only appear when buttons are pressed rather than on all the time. Timeout still impacts this feature.</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#ff000000</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>
    <string name="network_traffic_state_title">Show net activity in statusbar</string>
    <string name="network_traffic_autohide_threshold_title">Net activity autohide threshold (KB/s)</string>
    <string name="carrier_options">Select display locations</string>
    <string name="custom_carrier_label_title">Custom carrier label</string>
    <string name="custom_carrier_label_explain">Enter a custom label. Leave blank to use your network name</string>
    <string name="custom_carrier_label_notset">Custom label currently not set</string>
    <string name="show_carrier_title">Carrier label</string>
    <string name="show_carrier_disabled">Disabled</string>
    <string name="show_carrier_keyguard">Lockscreen</string>
    <string name="show_carrier_statusbar">Status bar</string>
    <string name="show_carrier_enabled">Both</string>
    <string name="quick_pulldown_title">Quick pulldown</string>
    <string name="quick_pulldown_summary">%1$s edge of the status bar pulls down Quick Settings</string>
    <string name="quick_pulldown_summary_always">Always show Quick Settings on status bar pulldown</string>
    <string name="quick_pulldown_off">Off</string>
    <string name="quick_pulldown_left">Left</string>
    <string name="quick_pulldown_right">Right</string>
    <string name="quick_pulldown_always">Always</string>
    <string name="qs_footer_warnings_title">QS footer warnings</string>
    <string name="qs_footer_warnings_summary">Display a warning at bottom of the QS panel while your network is monitored by external apps or a VPN</string>
    <string name="brightness_icon_title">Auto-brightness icon</string>
    <string name="brightness_icon_summary">Show a auto-brightness icon to the right of the brightness slider to toggle auto-brightness</string>
    <string name="show_brightness_title">Brightness slider</string>
    <string name="show_brightness_summary">Show the brightness slider</string>
    <string name="hide_lockscreen_clock_title">Clock widget</string>
    <string name="hide_lockscreen_clock_summary">Change the clock widget\'s visibility</string>
    <string name="hide_lockscreen_date_title">Date widget</string>
    <string name="hide_lockscreen_date_summary">Change the date\'s visibility underneath the clock widget</string>
    <string name="hide_lockscreen_alarm_title">Alarm text</string>
    <string name="hide_lockscreen_alarm_summary">Change the alarm text\'s visibility underneath the clock widget</string>
    <string name="ticker_mode_title">Statusbar notification ticker</string>
    <string name="ticker_disabled">Disabled</string>
    <string name="ticker_enabled">Notification ticker</string>
    <string name="ticker_media_enabled">Notification and music ticker</string>
    <string name="icon_manager_title">Icon manager</string>
    <string name="systemui_tuner_lockscreen_bottom_shortcuts_title">Bottom shortcuts</string>
    <string name="systemui_tuner_lockscreen_bottom_shortcuts_summary">Configure the bottom shortcuts in the keyguard</string>
    <string name="double_tap_sleep_lockscreen_title">Double tap to sleep gesture</string>
    <string name="double_tap_sleep_lockscreen_summary">Double tap anywhere to sleep on lockscreen</string>
    <string name="app_ops_category">App Ops</string>
    <string name="navbar_interface_title">Interface</string>
    <string name="navbar_size">Bar size</string>
    <string name="navbar_mode">Navigation mode</string>
    <string name="navbar_mode_summary">Select which navigation mode to use on your device</string>
    <string name="navbar_visibility">Allow navigation bar</string>
    <string name="navigationbar_settings_title">Navigation bar</string>
    <string name="navigationbar_settings_summary">Customize navigation style and behavior</string>
    <string name="navbar_general_title">Advanced</string>
    <string name="navigation_bar_left_title">Left-handed mode</string>
    <string name="navigation_bar_left_summary">Place the navigation bar on the left side of the screen in landscape mode</string>
    <string name="smartbar_interface">SmartBar</string>
    <string name="icon_pack_picker_dialog_title">Icon packs</string>
    <string name="image_exceeds_max_allowed_size">Image must not exceed 512x512</string>
    <string name="invalid_icon_from_uri">Unable to load image from content provider</string>
    <string name="picker_activities">Activities</string>
    <string name="select_custom_app_title">Select custom app</string>
    <string name="select_custom_activity_title">Select custom activity</string>
    <string name="profile_applist_title">Applications</string>
    <string name="default_string">Stock</string>
    <string name="default_settings">Stock settings</string>
    <string name="default_settings_summary">Stock AOSP navigation bar</string>
    <string name="choose_action_title">Choose action</string>
    <string name="action_entry_default_action">Default settings</string>
    <string name="action_entry_select_app">Select application</string>
    <string name="action_entry_custom_action">Select custom action</string>
    <string name="action_value_default_action" translatable="false">default</string>
    <string name="action_value_select_app" translatable="false">app</string>
    <string name="action_value_custom_action" translatable="false">custom</string>
    <string name="action_value_back" translatable="false">task_back</string>
    <string name="action_value_home" translatable="false">task_home</string>
    <string name="action_value_search_assist" translatable="false">task_assist</string>
    <string name="action_value_recent_apps" translatable="false">task_recents</string>
    <string name="action_value_voice_search" translatable="false">task_voice_search</string>
    <string name="action_value_menu" translatable="false">task_menu</string>
    <string name="fling_settings">Fling settings</string>
    <string name="fling_settings_summary">A very unique and fully-customizable gesture-based navigation bar</string>
    <string name="fling_interface">Fling</string>
    <string name="fling_enable_title">Enable Fling</string>
    <string name="fling_back_home_policy">Back and Home are required to be set at all times. To change a Back or Home assignment, set the desired assignment first.\n\nAlso, setting a double tap action will delay single tap a bit.</string>
    <string name="fling_split_bar_policy">When only a right or left action is assigned, the action applies to the full bar.</string>
    <string name="fling_def_summary">No action set</string>
    <string name="fling_swipe_actions">Swipe gestures</string>
    <string name="fling_tap_actions">Tap gestures</string>
    <string name="fling_short_swipe_right">Right short swipe</string>
    <string name="fling_short_swipe_left">Left short swipe</string>
    <string name="fling_long_swipe_right">Right long swipe</string>
    <string name="fling_long_swipe_left">Left long swipe</string>
    <string name="fling_right_up_swipe">Right side swipe up</string>
    <string name="fling_left_up_swipe">Left side swipe up</string>
    <string name="fling_single_tap">Single tap right</string>
    <string name="fling_double_tap">Double tap right</string>
    <string name="fling_long_press">Long press right</string>
    <string name="fling_single_left_tap">Single tap left</string>
    <string name="fling_double_left_tap">Double tap left</string>
    <string name="fling_long_left_press">Long press left</string>
    <string name="long_swipe_portrait_title">Portrait</string>
    <string name="long_swipe_landscape_title">Landscape</string>
    <string name="portrait_right_swipe_title">Portrait right swipe</string>
    <string name="portrait_left_swipe_title">Portrait left swipe</string>
    <string name="landscape_right_swipe_title">Landscape right swipe</string>
    <string name="landscape_left_swipe_title">Landscape left swipe</string>
    <string name="vertical_up_swipe_title">Vertical up swipe</string>
    <string name="headset_connect_player_title">Launch music app on headset connection</string>
    <string name="incall_vibration_category">In-call vibration options</string>
    <string name="incall_vibrate_connect_title">Vibrate on connect</string>
    <string name="incall_vibrate_call_wait_title">Vibrate on call waiting</string>
    <string name="incall_vibrate_disconnect_title">Vibrate on disconnect</string>
    <string name="qs_layout_category">QS tiles layout</string>
    <string name="qs_rows_portrait_title">Tiles rows on portrait</string>
    <string name="qs_rows_landscape_title">Tiles rows on landscape</string>
    <string name="qs_columns_portrait_title">Tiles columns on portrait</string>
    <string name="qs_columns_landscape_title">Tiles columns on landscape</string>
    <string name="battery_light_settings">Battery charging light</string>
    <string name="heads_up_notifications">Heads up</string>
    <string name="torch_power_button_gesture_title">Screen off power button torch</string>
    <string name="notification_sound_vib_screen_on_title">Notifications sound and vibration if screen is on</string>
    <string name="less_notification_sounds_title">Smart notification sounds</string>
    <string name="less_notification_sounds_summary">Play the notification sound of each app only once per set time period</string>
</resources>