<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2017-18 Team Darkness

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/quick_settings_category">


    <com.aos.laboratory.preferences.SystemSettingSwitchPreference
        android:key="status_bar_quick_qs_pulldown"
        android:title="@string/status_bar_quick_qs_pulldown"
        android:defaultValue="true" />

    <com.aos.laboratory.preferences.SecureSettingSwitchPreference
        android:key="qs_show_brightness"
        android:title="@string/show_brightness_title"
        android:summary="@string/show_brightness_summary"
        android:defaultValue="true" />

    <com.aos.laboratory.preferences.SystemSettingSwitchPreference
        android:key="qs_show_brightness_icon"
        android:title="@string/brightness_icon_title"
        android:summary="@string/brightness_icon_summary"
        android:dependency="qs_show_brightness"
        android:defaultValue="false"/>

    <com.aos.laboratory.preferences.SystemSettingSwitchPreference
        android:key="qs_footer_warnings"
        android:title="@string/qs_footer_warnings_title"
        android:summary="@string/qs_footer_warnings_summary"
        android:defaultValue="true" />

     <PreferenceCategory
        android:key="qs_layout_category"
        android:title="@string/qs_layout_category">

    <com.aos.laboratory.preferences.CustomSeekBarPreference
        android:key="qs_rows_portrait"
        android:title="@string/qs_rows_portrait_title"
        android:max="5"
        settings:min="1"
        settings:units="" />

    <com.aos.laboratory.preferences.CustomSeekBarPreference
        android:key="qs_rows_landscape"
        android:title="@string/qs_rows_landscape_title"
        android:max="3"
        settings:min="1"
        settings:units="" />

    <com.aos.laboratory.preferences.CustomSeekBarPreference
        android:key="qs_columns_portrait"
        android:title="@string/qs_columns_portrait_title"
        android:max="7"
        settings:min="1"
        settings:units="" />

    <com.aos.laboratory.preferences.CustomSeekBarPreference
        android:key="qs_columns_landscape"
        android:title="@string/qs_columns_landscape_title"
        android:max="9"
        settings:min="1"
        settings:units="" />

    </PreferenceCategory>

</PreferenceScreen>
