<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2017-18 Team Darkness

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/misc_category"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <!-- AppOps -->
    <Preference
        android:key="app_ops"
        android:fragment="com.android.settings.applications.AppOpsSummary"
        android:title="@string/app_ops_category"
        android:icon="@drawable/ic_appops" />

    <ListPreference
        android:key="headset_connect_player"
        android:title="@string/headset_connect_player_title"
        android:icon="@drawable/ic_headphones"
        android:entries="@array/headset_connect_player_entries"
        android:entryValues="@array/headset_connect_player_values" />

    <ListPreference
        android:key="torch_power_button_gesture"
        android:icon="@drawable/ic_flashlight"
        android:title="@string/torch_power_button_gesture_title"
        android:entries="@array/torch_power_button_gesture_entries"
        android:entryValues="@array/torch_power_button_gesture_values" />

    <PreferenceCategory
        android:key="incall_vib_options"
        android:title="@string/incall_vibration_category" >

        <com.aos.laboratory.preferences.SystemSettingSwitchPreference
            android:key="vibrate_on_connect"
            android:title="@string/incall_vibrate_connect_title"
            android:icon="@drawable/ic_vibrate_call_connect"
            android:defaultValue="false" />

        <com.aos.laboratory.preferences.SystemSettingSwitchPreference
            android:key="vibrate_on_callwaiting"
            android:title="@string/incall_vibrate_call_wait_title"
            android:icon="@drawable/ic_vibrate_call_wait"
            android:defaultValue="false" />

        <com.aos.laboratory.preferences.SystemSettingSwitchPreference
            android:key="vibrate_on_disconnect"
            android:title="@string/incall_vibrate_disconnect_title"
            android:icon="@drawable/ic_vibrate_call_disconnect"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="light_category"
        android:title="@string/light_category">

     <Preference
         android:key="battery_charging_light"
         android:fragment="com.aos.laboratory.cat.BatteryLightSettings"
         android:title="@string/battery_light_settings"
         android:icon="@drawable/ic_settings_led" />

    </PreferenceCategory>

</PreferenceScreen>
