<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2017 Atomic-OS

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/panels_category"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

   <!-- Notification Panel -->
   <PreferenceScreen
     android:key="quick_settings"
     android:fragment="com.aos.laboratory.cat.QuickSettings"
     android:title="@string/quick_settings_category"
     android:icon="@drawable/ic_quick_settings" />

    <!-- Recent Panel -->
   <!--PreferenceScreen
    android:key="recents"
    android:fragment="com.aos.laboratory.cat.Recents"
    android:layout="@layout/preference_recents"
    android:title="@string/recents_category" /-->

    <PreferenceCategory
        android:key="notifications_category"
        android:title="@string/notifications_category">

     <Preference
        android:key="heads_up_notifications"
        android:title="@string/heads_up_notifications"
        android:icon="@drawable/ic_headsup"
        android:fragment="com.aos.laboratory.cat.HeadsUpSettings"/>

     <ListPreference
        android:key="notification_sound_vib_screen_on"
        android:icon="@drawable/ic_notif_sound"
        android:title="@string/notification_sound_vib_screen_on_title"
        android:entries="@array/notification_sound_vib_screen_on_entries"
        android:entryValues="@array/notification_sound_vib_screen_on_values"
        android:summary="%s" />

    <ListPreference
        android:key="less_notification_sounds"
        android:title="@string/less_notification_sounds_title"
        android:summary="@string/less_notification_sounds_summary"
        android:entries="@array/less_notification_sounds_entries"
        android:entryValues="@array/less_notification_sounds_values" />

    </PreferenceCategory>

</PreferenceScreen>
