<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017 Team Darkness Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/action_statusbar"
        android:icon="@drawable/window_open"
        android:title="@string/nav_statusbar"/>
    <item
        android:id="@+id/action_lockscreen"
        android:icon="@drawable/lock"
        android:title="@string/nav_lockscreen"/>
    <item
        android:id="@+id/action_navigation"
        android:icon="@drawable/gamepad"
        android:title="@string/nav_navigation"/>
    <item
        android:id="@+id/action_panels"
        android:icon="@drawable/panels"
        android:title="@string/nav_panels"/>
    <item
        android:id="@+id/action_misc"
        android:icon="@drawable/dice_3"
        android:title="@string/nav_misc"/>
    <!--<item
        android:id="@+id/action_item5"
        android:icon="@drawable/account_circle"
        android:title="Account"/>-->
</menu>
