<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2017-18 Team Darkness

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/lockscreen_category"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <Preference
        android:key="bottom_shortcuts_category"
        android:icon="@drawable/ic_shortcuts"
        android:title="@string/systemui_tuner_lockscreen_bottom_shortcuts_title"
        android:summary="@string/systemui_tuner_lockscreen_bottom_shortcuts_summary">
        <intent android:action="android.intent.action.MAIN"
            android:targetPackage="com.android.systemui"
            android:targetClass="com.android.systemui.tuner.LockscreenActivity" />
    </Preference>

    <com.aos.laboratory.preferences.SystemSettingSwitchPreference
        android:key="double_tap_sleep_lockscreen"
        android:title="@string/double_tap_sleep_lockscreen_title"
        android:summary="@string/double_tap_sleep_lockscreen_summary"
        android:icon="@drawable/ic_doubletap"
        android:defaultValue="true" />

</PreferenceScreen>
