<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2017-18 Team Darkness

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/navigation_category"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

     <Preference
        android:key="navigation_options"
        android:fragment="com.aos.laboratory.cat.NavigationBar"
        android:icon="@drawable/ic_navigation"
        android:title="@string/navigationbar_settings_title" />

    <PreferenceScreen
        android:key="buttons"
        android:title="@string/button_settings"
        android:icon="@drawable/ic_button"
        android:fragment="com.aos.laboratory.cat.Buttons" />

    <PreferenceScreen
        android:key="power_menu"
        android:title="@string/power_menu_settings"
        android:icon="@drawable/ic_power_menu"
        android:fragment="com.aos.laboratory.cat.PowerMenu" />

</PreferenceScreen>
